--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -66,7 +66,7 @@ layout: blog
                     </nav>
                 </div>
             </footer>
-            <div class="misc-content">
+            <!--<div class="misc-content">
                 {% if site.disqus.shortname and page.comments != false %}
                     {% include common/disqus.html %}
                     <div class="comments">
@@ -74,7 +74,12 @@ layout: blog
                         <div id="disqus_thread"></div>
                     </div>
                 {% endif %}
-            </div>
+            </div>-->
         </div>
     </div>
 </article>
+<div class="misc-content">
+    {% if site.gitment.owner and site.gitment.repo and site.gitment.oauth_client_id and site.gitment.oauth_client_secret %}
+    {% include common/gitment.html %}
+    {% endif %}
+</div>
