--- a/_includes/blog/footer.html
+++ b/_includes/blog/footer.html
@@ -25,3 +25,6 @@
     </div>
     <a href="#" class="internal back-to-top">{{ site.data.i18n[site.lang].back_to_top }}</a>
 </footer>
+{% if site.live2dgirl %}
+    {% include common/live2dgirl.html %}
+{% endif %}
