修改live2dgirl的台词

--- a/_includes/blog/header.html
+++ b/_includes/blog/header.html
@@ -3,7 +3,7 @@
         <div class="unit-inner unit-head-inner">
             <nav class="nav-global">
                 <ul>
-                    <li class="logo nav-link">
+                    <li class="logo">
                         <button class="btn-menu" title="{{ site.data.i18n[site.lang].menu }}"></button>
                         <a href="{{ site.paths.blog | relative_url }}">{{ site.title }}</a>
                         <!--[if !IE]> -->
