--- a/_includes/blog/header.html
+++ b/_includes/blog/header.html
@@ -12,6 +12,8 @@
                     </li>
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].categories }}" href="{{ site.paths.categories | relative_url }}">{{ site.data.i18n[site.lang].categories }}</a></li>
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].tags }}" href="{{ site.paths.tags | relative_url }}">{{ site.data.i18n[site.lang].tags }}</a></li>
+                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].my_reader }}" href="{{ site.paths.my_reader | relative_url }}">{{ site.data.i18n[site.lang].my_reader }}</a></li>
+                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].my_learner }}" href="{{ site.paths.my_learner | relative_url }}">{{ site.data.i18n[site.lang].my_learner }}</a></li>
                     <!--[if !IE]> -->
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].search }}" class="btn-search" href="#">{{ site.data.i18n[site.lang].search }}</a></li>
                     <!-- <![endif]-->
