--- a/_includes/blog/overlay.html
+++ b/_includes/blog/overlay.html
@@ -6,6 +6,8 @@
             <ul>
                 <li><a href="{{ site.paths.categories | relative_url }}">{{ site.data.i18n[site.lang].categories }}</a></li>
                 <li><a href="{{ site.paths.tags | relative_url }}">{{ site.data.i18n[site.lang].tags }}</a></li>
+                <li><a href="{{ site.paths.my_reader | relative_url }}">{{ site.data.i18n[site.lang].my_reader }}</a></li>
+                <li><a href="{{ site.paths.my_learner | relative_url }}">{{ site.data.i18n[site.lang].my_learner }}</a></li>
                 <li><a href="{{ site.paths.home | relative_url }}">{{ site.data.i18n[site.lang].about }}</a></li>
             </ul>
         </div>
