--- a/learner/install-index/template/index.html
+++ b/learner/install-index/template/index.html
@@ -277,6 +277,34 @@
             }
 
         }
+        img {
+          max-width: 100%;
+        }
+        table {
+        	font-family: verdana,arial,sans-serif;
+        	font-size:11px;
+        	color:#333333;
+        	border-width: 1px;
+        	border-color: #666666;
+        	border-collapse: collapse;
+        }
+        table th {
+        	border-width: 1px;
+        	padding: 8px;
+        	border-style: solid;
+        	border-color: #666666;
+        	background-color: #a9c7af;
+        }
+        table td {
+        	border-width: 1px;
+        	padding: 8px;
+        	border-style: solid;
+        	border-color: #666666;
+        	background-color: #ffffff;
+        }
+        table tr:hover > td {
+          background-color: #d4e3e5;
+        }
     </style>
     <link rel="stylesheet" href="static/css/prism.css"/>
     <script>
