--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,10 +24,14 @@
         {% include common/notices.html %}
 
         <div class="headings animated fadeInLeft">
-            {% if site.home.section1 %}{{ site.home.section1 }}{% endif %}
-            {% if site.home.section2 %}{{ site.home.section2 }}{% endif %}
-            {% if site.home.section3 %}{{ site.home.section3 }}{% endif %}
+            <!-- {% if site.home.section1 %}{{ site.home.section1 }}{% endif %} -->
+            <!-- {% if site.home.section2 %}{{ site.home.section2 }}{% endif %} -->
+            <!-- {% if site.home.section3 %}{{ site.home.section3 }}{% endif %} -->
+            <div class="unit-body">
+                {% include helpers/posts_list %}
+            </div>
         </div>
+        <br/>
         <a class="btn-continue animated bounce" title="{{ site.data.i18n[site.lang].more }}" href="#social"></a>
     </div>
 
