--- a/_sass/simple-texture-home.scss
+++ b/_sass/simple-texture-home.scss
@@ -180,4 +180,49 @@ textarea {
     }
 }
 
+.unit-body {
+    margin-right: 12%;
+    margin-left: 12%;
+}
+
+.unit-body li {
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
+.unit-body ul li {
+    list-style: disc;
+}
+
+.unit-body li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
+
+.unit-body li a {
+    float: left;
+}
+
+.unit-body li .date {
+    font-size: .8em;
+    float: right;
+}
+
+.unit-body span {
+    padding: 0 10px 0 10px;
+}
+
+.unit-body a {
+    border-bottom: 1px dotted #FFD18D;
+    text-decoration: none;
+    font-size: 1em;
+    line-height: 1.525em;
+    border-bottom: none;
+    font-family: "Bitter","Palatino Linotype","Book Antiqua",Palatino,serif;
+}
+
+.unit-body a:hover {
+    background-color: #FFD18D;
+}
+
 @import 'simple-texture/home/responsive';
