--- a/_includes/common/live2dgirl.html
+++ b/_includes/common/live2dgirl.html
@@ -15,4 +15,8 @@
 </div>
 <script src="{{ site.baseurl }}/live2dgirl/waifu-tips.js"></script>
 <script src="{{ site.baseurl }}/live2dgirl/live2d.js"></script>
-<script type="text/javascript">initModel("{{ site.baseurl }}/live2dgirl/")</script>
+<script type="text/javascript">
+function initLive2dGirl() {
+    initModel("{{ site.baseurl }}/live2dgirl/");
+}
+</script>
