--- a/_includes/blog/header.html
+++ b/_includes/blog/header.html
@@ -10,6 +10,7 @@
                         <button class="btn-search" title="{{ site.data.i18n[site.lang].search }}"></button>
                         <!-- <![endif]-->
                     </li>
+                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].articles }}" href="{{ site.paths.blog | relative_url }}">{{ site.data.i18n[site.lang].articles }}</a></li>
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].categories }}" href="{{ site.paths.categories | relative_url }}">{{ site.data.i18n[site.lang].categories }}</a></li>
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].tags }}" href="{{ site.paths.tags | relative_url }}">{{ site.data.i18n[site.lang].tags }}</a></li>
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].my_reader }}" href="{{ site.paths.my_reader | relative_url }}">{{ site.data.i18n[site.lang].my_reader }}</a></li>
