--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,14 +34,18 @@ layout: blog
                                 <time class="date-updated updated" title="{{ page.last_updated | date_to_xmlschema }}" datetime="{{ page.last_updated | date_to_xmlschema }}">{{ page.last_updated }}</time>)
                             {% endif %}
                         </p>
+                        {% if page.categories.size > 0 %}
                         <ul class="list-category list-linear">
                             <li class="list-head">{{ site.data.i18n[site.lang].categories }}: </li>
                             {% assign categories_list = page.categories | sort %} {% include helpers/categories_list %}
                         </ul>
+                        {% endif %}
+                        {% if page.tags.size > 0 %}
                         <ul class="list-tag list-linear">
                             <li class="list-head">{{ site.data.i18n[site.lang].tags }}: </li>
                             {% assign tags_list = page.tags | sort %} {% include helpers/tags_list %}
                         </ul>
+                        {% endif %}
                     </div>
                     <div id="articleBody" itemprop="articleBody">
                         {{ content }}
