--- a/_layouts/timeline/timeline_page.html
+++ b/_layouts/timeline/timeline_page.html
@@ -1,5 +1,5 @@
 ---
-layout: timeline
+layout: timeline/timeline
 ---
 <article class="unit-article layout-page">
     <div class="unit-inner unit-article-inner">
