--- a/_includes/blog/overlay.html
+++ b/_includes/blog/overlay.html
@@ -4,10 +4,12 @@
         <a class="btn-close">{{ site.data.i18n[site.lang].close }}</a>
         <div class="results">
             <ul>
+                <li><a href="{{ site.paths.blog | relative_url }}">{{ site.data.i18n[site.lang].articles }}</a></li>
                 <li><a href="{{ site.paths.categories | relative_url }}">{{ site.data.i18n[site.lang].categories }}</a></li>
                 <li><a href="{{ site.paths.tags | relative_url }}">{{ site.data.i18n[site.lang].tags }}</a></li>
                 <li><a href="{{ site.paths.my_reader | relative_url }}">{{ site.data.i18n[site.lang].my_reader }}</a></li>
                 <li><a href="{{ site.paths.my_learner | relative_url }}">{{ site.data.i18n[site.lang].my_learner }}</a></li>
+                <li><a href="{{ site.paths.life_news | relative_url }}">{{ site.data.i18n[site.lang].life_news }}</a></li>
                 <li><a href="{{ site.paths.my_qq_zone | relative_url }}">{{ site.data.i18n[site.lang].my_qq_zone }}</a></li>
                 <li><a href="{{ site.paths.home | relative_url }}">{{ site.data.i18n[site.lang].about }}</a></li>
             </ul>
