--- a/_includes/common/gitment.html
+++ b/_includes/common/gitment.html
@@ -4,7 +4,7 @@
 <script>
     $(document).ready(function () {
         var gitment = new Gitment({
-            id: '{{ page.title }}', // 可选。默认为 location.href
+            id: '{{ page.url }}', // 可选。默认为 location.href
             owner: '{{ site.gitment.owner }}',
             repo: '{{ site.gitment.repo }}',
             oauth: {
