--- a/_includes/common/live2dgirl.html
+++ b/_includes/common/live2dgirl.html
@@ -17,6 +17,7 @@
 <script src="{{ site.baseurl }}/plugin/live2dgirl/live2d.js"></script>
 <script type="text/javascript">
 function initLive2dGirl() {
+    $(".waifu").css('display', 'block');
     initModel("{{ site.baseurl }}/plugin/live2dgirl/");
 }
 </script>
