--- a/reader/static/css/book.css
+++ b/reader/static/css/book.css
@@ -21,7 +21,7 @@ body {
 }
 
 .entry-content header h1 {
-  font-size: 24pt;
+  font-size: 1.75em;
   margin: 0;
   padding-top: 0.2em;
   padding-bottom: 0.5em;
@@ -267,6 +267,14 @@ body {
     display: none;
   }
 
+  .entry-content .main-content .nav-container {
+    width: 0%;
+  }
+  
+  .entry-content .main-content .article-container {
+    width: 100%;
+  }
+
   .entry-content nav {
     position: fixed;
     top: 0;
@@ -274,10 +282,11 @@ body {
     width: 100%;
     height: 48px;
   }
-
+/* 
   .entry-content nav .menubar {
     display: block;
-  }
+  } 
+*/
 
   .entry-content nav .banner {
     float: right;
