adjust home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@
             <!-- {% if site.home.section2 %}{{ site.home.section2 }}{% endif %} -->
             <!-- {% if site.home.section3 %}{{ site.home.section3 }}{% endif %} -->
             <div class="unit-body">
-                {% include helpers/posts_list %}
+                {% include helpers/posts_list_page %}
             </div>
         </div>
         <br/>
