--- a/_includes/common/directory.html
+++ b/_includes/common/directory.html
@@ -13,6 +13,16 @@
 #directory ul li ul li a{margin-left:20px;white-space:nowrap;color:#5f5f5f}
 #directory ul li ul li ul li a{margin-left:30px;color:#5f5f5f}
 #directory a:hover{color:#eb5055}
+@media (max-width: 768px) {
+    #directory p,ul {
+        display: none;
+    }
+}
+@media (max-width: 480px) {
+    #directory p,ul {
+        display: none;
+    }
+}
 </style>
 <div id="directory-content" class="directory-content">
     <div id="directory"></div>
