--- a/_includes/blog/header.html
+++ b/_includes/blog/header.html
@@ -13,10 +13,11 @@
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].articles }}" href="{{ site.paths.blog | relative_url }}">{{ site.data.i18n[site.lang].articles }}</a></li>
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].categories }}" href="{{ site.paths.categories | relative_url }}">{{ site.data.i18n[site.lang].categories }}</a></li>
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].tags }}" href="{{ site.paths.tags | relative_url }}">{{ site.data.i18n[site.lang].tags }}</a></li>
-                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].my_reader }}" href="{{ site.paths.my_reader | relative_url }}">{{ site.data.i18n[site.lang].my_reader }}</a></li>
-                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].my_learner }}" href="{{ site.paths.my_learner | relative_url }}">{{ site.data.i18n[site.lang].my_learner }}</a></li>
+                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].reader }}" href="{{ site.paths.reader | relative_url }}">{{ site.data.i18n[site.lang].reader }}</a></li>
+                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].learner }}" href="{{ site.paths.learner | relative_url }}">{{ site.data.i18n[site.lang].learner }}</a></li>
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].life_news }}" href="{{ site.paths.life_news | relative_url }}">{{ site.data.i18n[site.lang].life_news }}</a></li>
-                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].my_qq_zone }}" href="{{ site.paths.my_qq_zone | relative_url }}">{{ site.data.i18n[site.lang].my_qq_zone }}</a></li>
+                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].letter }}" href="{{ site.paths.letter | relative_url }}">{{ site.data.i18n[site.lang].letter }}</a></li>
+                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].qq_zone }}" href="{{ site.paths.qq_zone | relative_url }}">{{ site.data.i18n[site.lang].qq_zone }}</a></li>
                     {% if site.live2dgirl %}
                     <li class="nav-link"><a title="召唤萌妹" class="btn-init-live2dgirl" href="#">萌妹</a></li>
                     {% endif %}
