--- a/_includes/blog/overlay.html
+++ b/_includes/blog/overlay.html
@@ -7,10 +7,11 @@
                 <li><a href="{{ site.paths.blog | relative_url }}">{{ site.data.i18n[site.lang].articles }}</a></li>
                 <li><a href="{{ site.paths.categories | relative_url }}">{{ site.data.i18n[site.lang].categories }}</a></li>
                 <li><a href="{{ site.paths.tags | relative_url }}">{{ site.data.i18n[site.lang].tags }}</a></li>
-                <li><a href="{{ site.paths.my_reader | relative_url }}">{{ site.data.i18n[site.lang].my_reader }}</a></li>
-                <li><a href="{{ site.paths.my_learner | relative_url }}">{{ site.data.i18n[site.lang].my_learner }}</a></li>
+                <li><a href="{{ site.paths.reader | relative_url }}">{{ site.data.i18n[site.lang].reader }}</a></li>
+                <li><a href="{{ site.paths.learner | relative_url }}">{{ site.data.i18n[site.lang].learner }}</a></li>
                 <li><a href="{{ site.paths.life_news | relative_url }}">{{ site.data.i18n[site.lang].life_news }}</a></li>
-                <li><a href="{{ site.paths.my_qq_zone | relative_url }}">{{ site.data.i18n[site.lang].my_qq_zone }}</a></li>
+                <li><a href="{{ site.paths.letter | relative_url }}">{{ site.data.i18n[site.lang].letter }}</a></li>
+                <li><a href="{{ site.paths.qq_zone | relative_url }}">{{ site.data.i18n[site.lang].qq_zone }}</a></li>
                 <li><a href="{{ site.paths.home | relative_url }}">{{ site.data.i18n[site.lang].about }}</a></li>
             </ul>
         </div>
