--- a/letter/static/css/letter-3.css
+++ b/letter/static/css/letter-3.css
@@ -1,7 +1,7 @@
 /*
 use case
 ---------------------------
-<section class="notepaper">
+<section class="letter-content">
     <figure class="quote">
         <blockquote class="curly-quotes" cite="http://www.youtube.com/watch?v=qYLrc9hy0t0">
         The same wind blows on us all.
@@ -13,11 +13,10 @@ use case
     </figure>
 </section>
 */
-.notepaper {
+.letter-content {
   position: relative;
   margin: 80px auto;
   padding: 29px 20px 20px 45px;
-  width: 280px;
   line-height: 30px;
   color: #6a5f49;
   text-shadow: 0 1px 1px white;
@@ -71,21 +70,21 @@ use case
   box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), inset 0 0 5px #d8e071,
     0 0 1px rgba(0, 0, 0, 0.1), 0 2px rgba(0, 0, 0, 0.02);
 }
-.notepaper:before,
-.notepaper:after {
+.letter-content:before,
+.letter-content:after {
   content: "";
   position: absolute;
   top: 0;
   bottom: 0;
 }
-.notepaper:before {
+.letter-content:before {
   left: 28px;
   width: 2px;
   border: solid #efcfad;
   border-color: rgba(239, 207, 173, 0.9);
   border-width: 0 1px;
 }
-.notepaper:after {
+.letter-content:after {
   z-index: -1;
   left: 0;
   right: 0;
@@ -132,6 +131,6 @@ use case
   color: #84775c;
 }
 
-.lt-ie8 .notepaper {
+.lt-ie8 .letter-content {
   padding: 15px 25px;
 }
