--- a/letter/static/css/letter-3.css
+++ b/letter/static/css/letter-3.css
@@ -14,6 +14,8 @@ use case
 </section>
 */
 .letter-content {
+  word-wrap: break-word;
+  word-break: normal;
   position: relative;
   margin: 80px auto;
   padding: 29px 20px 20px 45px;
@@ -96,7 +98,15 @@ use case
   -o-transform: rotate(2deg);
   transform: rotate(2deg);
 }
-
+.letter-content pre {
+  word-wrap: break-word;
+  word-break: normal;
+  white-space:pre-wrap; /* css3.0 */ 
+  white-space:-moz-pre-wrap; /* Firefox */ 
+  white-space:-pre-wrap; /* Opera 4-6 */ 
+  white-space:-o-pre-wrap; /* Opera 7 */ 
+  word-wrap:break-word; /* Internet Explorer 5.5+ */ 
+}
 .quote {
   font-family: Georgia, serif;
   font-size: 14px;
