--- a/_layouts/letter_post.html
+++ b/_layouts/letter_post.html
@@ -10,6 +10,7 @@
 <head>
     {% include common/meta.html %}
     <link href='{{ site.baseurl }}/assets/stylesheets/blog.css' rel="stylesheet" type="text/css"/>
+    <!-- <link rel="stylesheet" href="{{ site.baseurl }}/letter/static/css/font.css" type="text/css"/> -->
     <link rel="stylesheet" href="{{ site.baseurl }}/letter/static/css/{{ page.cssType }}.css" type="text/css"/>
     {% include common/libraries.html %}
 </head>
