--- a/letter/static/css/letter-2.css
+++ b/letter/static/css/letter-2.css
@@ -16,6 +16,20 @@ use case
 </section> 
 */
 
+@font-face {
+  /* 信笺体 */
+  font-family: "Letter";
+  src: url("https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/fonts/letter.eot");
+  src: url("https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/fonts/letter.eot?#iefix") format("embedded-opentype"),
+    url("https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/fonts/letter.woff") format("woff"),
+    url("https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/fonts/letter.ttf") format("truetype"),
+    url("https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/fonts/letter.svg") format("svg");
+}
+
+.body .unit-body {
+  padding: 0;
+}
+
 .letter-content,
 .letter-content:before,
 .letter-content:after {
@@ -49,11 +63,11 @@ use case
   color: #666;
   word-wrap: break-word;
   word-break: normal;
-  font-family: STCaiyun, cursive;
+  font-family: 'Letter';
 }
 
 .letter-content * {
-  font-family: STCaiyun, cursive;
+  font-family: 'Letter';
 }
 
 .letter-content pre {
