--- a/_layouts/letter_post.html
+++ b/_layouts/letter_post.html
@@ -9,9 +9,20 @@
 
 <head>
     {% include common/meta.html %}
-    <link href='{{ site.baseurl }}/assets/stylesheets/blog.css' rel="stylesheet" type="text/css"/>
-    <!-- <link rel="stylesheet" href="{{ site.baseurl }}/letter/static/css/font.css" type="text/css"/> -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/letter/static/css/{{ page.cssType }}.css" type="text/css"/>
+    <link href='{{ site.baseurl }}/assets/stylesheets/blog.css' rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/letter/static/css/font-zh.css" type="text/css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/letter/static/css/font-en.css" type="text/css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/letter/static/css/{{ page.cssType }}.css" type="text/css" />
+    <style type="text/css">
+        .body .unit-body {
+            padding: 1em;
+        }
+
+        .letter-content * {
+            font-family: '{{ page.font }}',
+            cursive;
+        }
+    </style>
     {% include common/libraries.html %}
 </head>
 
@@ -36,13 +47,14 @@
                             </pre>
                         </div>
                         <p style="text-align: right;">
-                            {{ page.wishes }} <br/> {{ page.sendFrom }}
+                            {{ page.wishes }} <br /> {{ page.sendFrom }}
                         </p>
                     </section>
                 </div>
                 <div class="misc-content">
                     <!-- gitment -->
-                    {% if site.gitment.owner and site.gitment.repo and site.gitment.oauth_client_id and site.gitment.oauth_client_secret %}
+                    {% if site.gitment.owner and site.gitment.repo and site.gitment.oauth_client_id and
+                    site.gitment.oauth_client_secret %}
                     {% include common/gitment.html %}
                     {% endif %}
                     <!-- utterances -->
@@ -55,11 +67,10 @@
         {% include blog/footer.html %}
     </div>
     {% if site.directory %}
-        <script type="text/javascript" src="{{ site.baseurl }}/reader/static/js/nav.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/reader/static/js/nav.js"></script>
     {% endif %}
     {% include blog/scripts.html %}
     {% include common/img2show.html %}
 </body>
 
 </html>
-
