--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,24 +20,28 @@
     </ul>
 
     <div id="section0" class="section" data-name="bio">
-
+        {% if site.home.section1 %}{{ site.home.section1 }}{% endif %}
+        {% if site.home.section2 %}{{ site.home.section2 }}{% endif %}
         {% include common/notices.html %}
 
         <div class="headings animated fadeInLeft">
-            <!-- {% if site.home.section1 %}{{ site.home.section1 }}{% endif %} -->
-            <!-- {% if site.home.section2 %}{{ site.home.section2 }}{% endif %} -->
-            <!-- {% if site.home.section3 %}{{ site.home.section3 }}{% endif %} -->
             <div class="unit-body">
                 {% include helpers/posts_list_page %}
             </div>
         </div>
+        <hr/>
+        <h1 class="animated">
+            <a class="btn-enter btn-light" style="border: 0;color: darkgray;" title="{{ site.data.i18n[site.lang].enter_blog }}" href="{{ site.paths.blog | relative_url }}">{{ site.data.i18n[site.lang].enter_blog }}</a>
+        </h1>
         <br/>
         <a class="btn-continue animated bounce" title="{{ site.data.i18n[site.lang].more }}" href="#social"></a>
     </div>
 
     <div id="section1" class="section" data-name="social">
+        {% if site.home.section1 %}{{ site.home.section1 }}{% endif %}
+        {% if site.home.section3 %}{{ site.home.section3 }}{% endif %}
         <h1 class="animated hidden">
-            <a class="btn-enter btn-light" title="{{ site.data.i18n[site.lang].enter_blog }}" href="{{ site.paths.blog | relative_url }}">{{ site.data.i18n[site.lang].enter_blog }}</a>
+            <a class="btn-enter btn-light" href="{{ site.paths.github }}">{{ site.data.i18n[site.lang].enter_github }}</a>
         </h1>
         <div class="social-links animated hidden">
             <a class="btn-light ico-rss" href="{{ site.baseurl }}/feed.xml" rel="me" target="_blank" title="feed"></a>
