add gist and song

--- a/_includes/blog/overlay.html
+++ b/_includes/blog/overlay.html
@@ -11,6 +11,8 @@
                 <li><a href="{{ site.paths.learner | relative_url }}">{{ site.data.i18n[site.lang].learner }}</a></li>
                 <li><a href="{{ site.paths.life_news | relative_url }}">{{ site.data.i18n[site.lang].life_news }}</a></li>
                 <li><a href="{{ site.paths.letter | relative_url }}">{{ site.data.i18n[site.lang].letter }}</a></li>
+                <li><a href="{{ site.paths.song | relative_url }}">{{ site.data.i18n[site.lang].song }}</a></li>
+                <li><a href="{{ site.paths.gist | relative_url }}">{{ site.data.i18n[site.lang].gist }}</a></li>
                 <li><a href="{{ site.paths.qq_zone | relative_url }}">{{ site.data.i18n[site.lang].qq_zone }}</a></li>
                 <li><a href="{{ site.paths.home | relative_url }}">{{ site.data.i18n[site.lang].about }}</a></li>
             </ul>
