--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,10 +30,10 @@
             </div>
         </div>
         <hr/>
-        <h1 class="animated">
-            <a class="btn-enter btn-light" style="border: 0;color: darkgray;" title="{{ site.data.i18n[site.lang].enter_blog }}" href="{{ site.paths.blog | relative_url }}">{{ site.data.i18n[site.lang].enter_blog }}</a>
-        </h1>
         <br/>
+        <h1 class="animated">
+            <a class="btn-enter btn-light btn-animated" style="border: 0;color: darkgray; z-index: 2;" title="{{ site.data.i18n[site.lang].enter_blog }}" href="{{ site.paths.blog | relative_url }}">{{ site.data.i18n[site.lang].enter_blog }}</a>
+        </h1>
         <a class="btn-continue animated bounce" title="{{ site.data.i18n[site.lang].more }}" href="#social"></a>
     </div>
 
