--- a/_includes/blog/header.html
+++ b/_includes/blog/header.html
@@ -17,6 +17,8 @@
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].learner }}" href="{{ site.paths.learner | relative_url }}">{{ site.data.i18n[site.lang].learner }}</a></li>
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].life_news }}" href="{{ site.paths.life_news | relative_url }}">{{ site.data.i18n[site.lang].life_news }}</a></li>
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].letter }}" href="{{ site.paths.letter | relative_url }}">{{ site.data.i18n[site.lang].letter }}</a></li>
+                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].song }}" href="{{ site.paths.song | relative_url }}">{{ site.data.i18n[site.lang].song }}</a></li>
+                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].gist }}" href="{{ site.paths.gist | relative_url }}">{{ site.data.i18n[site.lang].gist }}</a></li>
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].qq_zone }}" href="{{ site.paths.qq_zone | relative_url }}">{{ site.data.i18n[site.lang].qq_zone }}</a></li>
                     {% if site.live2dgirl %}
                     <li class="nav-link"><a title="召唤萌妹" class="btn-init-live2dgirl" href="#">萌妹</a></li>
