--- a/_includes/common/img2show.html
+++ b/_includes/common/img2show.html
@@ -1,7 +1,7 @@
 <div id="imgEnlargeDiv" style="display: none; text-align: center;position: fixed;z-index: 1000;top: 0;left: 0;
-    width: 100%;height: 100%;background-color: rgba(255,255,255,.9);">
-    <img id="bigimg-random-12312" style="height: auto;width: 40%;border: 0; 
-        margin: auto;position: absolute;top: 0;bottom: 0;left: 0;right: 0;" src="" />
+    width: 100%;height: 100%;background-color: rgba(255,255,255,.9);overflow: hidden;">
+    <img id="bigimg-random-12312" style="height: auto;width: 90%;
+    position: absolute;margin:auto;top:0;bottom:0;left: 0;right: 0;" title="单击关闭图层" src="" />
 </div>
 <script type="text/javascript">
     // 图片放大  
@@ -17,6 +17,13 @@
         var src = _this.attr("src");// 获取当前点击的pimg元素中的src属性    
         $(bigimg).attr("src", src);// 设置#bigimg元素的src属性    
         $(outerdiv).fadeIn("fast");  // 图片放大的div快速淡入显示层
+        var imgWidth = $(bigimg).width();
+        var imgHeight = $(bigimg).height();
+        if (imgHeight > imgWidth) {
+            $(bigimg).css("height", "90%").css("width", "auto");
+        } else {
+            $(bigimg).css("height", "auto").css("width", "90%");
+        }
     }
 
     function imgEnlarge() {
