--- a/_sass/simple-texture-home.scss
+++ b/_sass/simple-texture-home.scss
@@ -1,43 +1,43 @@
-@import 'simple-texture/home/variables';
-@import 'simple-texture/common/normalize';
-@import 'simple-texture/common/animate';
-@import 'simple-texture/common/fonts';
-@import 'simple-texture/common/helper';
-@import 'simple-texture/common/pace';
-@import 'simple-texture/common/social-icons';
-@import 'simple-texture/home/fullpage';
+@import "simple-texture/home/variables";
+@import "simple-texture/common/normalize";
+@import "simple-texture/common/animate";
+@import "simple-texture/common/fonts";
+@import "simple-texture/common/helper";
+@import "simple-texture/common/pace";
+@import "simple-texture/common/social-icons";
+@import "simple-texture/home/fullpage";
 
 body {
-    font-family: $fonts-body;
-    font-size: 18px;
-    line-height: 36px;
+  font-family: $fonts-body;
+  font-size: 18px;
+  line-height: 36px;
 
-    color: $color-text-dark;
+  color: $color-text-dark;
 }
 
 h1 {
-    font-size: 5em;
-    /* text-transform: uppercase; */
+  font-size: 5em;
+  /* text-transform: uppercase; */
 }
 
 h2 {
-    font-size: 2.225em;
+  font-size: 2.225em;
 }
 
 h3 {
-    font-size: 1.725em;
+  font-size: 1.725em;
 }
 
 .small,
 aside,
 small {
-    font-size: .75em;
+  font-size: 0.75em;
 }
 
 a:hover,
 a:link,
 a:visited {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 button,
@@ -45,182 +45,229 @@ input,
 optgroup,
 select,
 textarea {
-    font-family: $fonts-body;
+  font-family: $fonts-body;
 }
 
 .site-notice {
-    top: 0;
+  top: 0;
 
-    width: 100%;
+  width: 100%;
 
-    text-align: center;
+  text-align: center;
 
-    background: $color-background-dark;
+  background: $color-background-dark;
 
-    a {
-        color: $color-hover;
+  a {
+    color: $color-hover;
 
-        &:hover {
-            color: $color-hover-transparent;
-        }
+    &:hover {
+      color: $color-hover-transparent;
     }
+  }
 }
 
 #menu {
-    display: none;
+  display: none;
 }
 
 .section {
-    text-align: center;
+  text-align: center;
 
-    span {
-        padding: 0 10px 0 10px;
-    }
+  span {
+    padding: 0 10px 0 10px;
+  }
 }
 
 #section0 {
-    background: url('../images/theme/noisy_texture_section0-200x200.png') repeat 0 0 #F0F0F0;
+  background: url("../images/theme/noisy_texture_section0-200x200.png") repeat 0
+    0 #f0f0f0;
 }
 
 #section1 {
-    background: url('../images/theme/noisy_texture_section1-200x200.png') repeat 0 0 #150E1F;
+  background: url("../images/theme/noisy_texture_section1-200x200.png") repeat 0
+    0 #150e1f;
 }
 
 #fullPage-nav {
-    span {
-        border: 1px solid #8A8A8A;
-    }
+  span {
+    border: 1px solid #8a8a8a;
+  }
 
-    li .active span {
-        background: #707070;
-    }
+  li .active span {
+    background: #707070;
+  }
 }
-
 
 .btn-light,
 .btn-dark {
-    -webkit-transition: all .3s ease-in-out;
-       -moz-transition: all .3s ease-in-out;
-         -o-transition: all .3s ease-in-out;
-            transition: all .3s ease-in-out;
-    text-decoration: none;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  text-decoration: none;
 
-    color: $color-text-light;
-    border: 1px solid #150E1F;
-    outline: none;
+  color: $color-text-light;
+  border: 1px solid #150e1f;
+  outline: none;
 
-    &:hover {
-        border: 1px solid $color-text-light;
-    }
+  &:hover {
+    border: 1px solid $color-text-light;
+  }
 }
 
 .btn-dark {
-    background-color: $color-background-dark !important;
-    &:hover,
-    &:focus {
-        background-color: $color-background-light !important;
-        color: #000000 !important;
-    }
+  background-color: $color-background-dark !important;
+  &:hover,
+  &:focus {
+    background-color: $color-background-light !important;
+    color: #000000 !important;
+  }
 }
 
 .btn-light {
-    background-color: $color-background-light !important;
-    &:hover,
-    &:focus {
-        background-color: $color-background-dark !important;
-        color: #FFFFFF !important;
-    }
+  background-color: $color-background-light !important;
+  &:hover,
+  &:focus {
+    background-color: $color-background-dark !important;
+    color: #ffffff !important;
+  }
 }
 
 .btn-enter {
-    padding: 4px 6px 0 4px;
+  padding: 4px 6px 0 4px;
+}
+
+.btn-animated {
+  background-color: #141414;
+  border: none;
+  color: #ffffff;
+  outline: none;
+  padding: 12px 40px 10px;
+  position: relative;
+}
+
+.btn-animated:before,
+.btn-animated:after {
+  border: 0 solid transparent;
+  transition: all 0.3s;
+  content: "";
+  height: 100%;
+  position: absolute;
+  width: 24px;
+}
+
+.btn-animated:before {
+  right: 0;
+  top: -4px;
+}
+
+.btn-animated:after {
+  bottom: -4px;
+  left: 0;
+}
+
+.btn-animated:hover:before {  
+  border-top: 2px solid #141414;
+  border-right: 2px solid #141414;
+  border-bottom: 0;
+  border-right: 0;
+  height: 100%;
+  width: 100%;
+}
+.btn-animated:hover:after {
+  border-bottom: 2px solid #141414;
+  border-left: 2px solid #141414;
+  border-top: 0;
+  border-left: 0;
+  height: 100%;
+  width: 100%;
 }
 
 .btn-continue {
-    position: absolute;
-    z-index: 2;
-    bottom: 0;
-    left: 50%;
+  position: absolute;
+  z-index: 2;
+  bottom: 0;
+  left: 50%;
 
-    display: inline-block;
+  display: inline-block;
 
-    width: 32px;
-    height: 32px;
-    margin-left: -30px;
-    padding: 12px;
+  width: 32px;
+  height: 32px;
+  margin-left: -30px;
+  padding: 12px;
 
-    -webkit-transition: all .3s ease-in-out;
-       -moz-transition: all .3s ease-in-out;
-         -o-transition: all .3s ease-in-out;
-            transition: all .3s ease-in-out;
-    text-indent: -9999em;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  text-indent: -9999em;
 
-    outline: none;
-    background-image: url('../images/theme/btn-more.png');
-    background-repeat: no-repeat;
-    background-position: center center;
+  outline: none;
+  background-image: url("../images/theme/btn-more.png");
+  background-repeat: no-repeat;
+  background-position: center center;
 
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
-    &:hover {
-        -webkit-animation-name: bounce;
-                animation-name: bounce;
-    }
+  &:hover {
+    -webkit-animation-name: bounce;
+    animation-name: bounce;
+  }
 }
 
 .social-links {
-    $icon-size: 64px;
-    a {
-        display: inline-block;
+  $icon-size: 64px;
+  a {
+    display: inline-block;
 
-        width: $icon-size;
-        height: $icon-size;
-        margin: 18px;
+    width: $icon-size;
+    height: $icon-size;
+    margin: 18px;
 
-        background-size: $icon-size $icon-size;
-    }
+    background-size: $icon-size $icon-size;
+  }
 }
 
 .unit-body {
-    margin-right: 12%;
-    margin-left: 12%;
+  margin-right: 12%;
+  margin-left: 12%;
 }
 
 .unit-body li {
-    text-align: left;
-    list-style: disc;
+  text-align: left;
+  list-style: disc;
 }
 
 .unit-body li .date {
-    font-size: .8em;
-    float: right;
+  font-size: 0.8em;
+  float: right;
 }
 
 @media only screen and (max-width: 1200px) {
   body {
-    font-size: .8em;
+    font-size: 0.8em;
     line-height: 24px;
   }
   .unit-body li .date {
-      display: none;
+    display: none;
   }
 }
 
 .unit-body span {
-    padding: 0 10px 0 10px;
+  padding: 0 10px 0 10px;
 }
 
 .unit-body a {
-    border-bottom: 1px dotted #FFD18D;
-    text-decoration: none;
-    font-size: 1em;
-    line-height: 1.525em;
-    border-bottom: none;
-    font-family: "Bitter","Palatino Linotype","Book Antiqua",Palatino,serif;
+  border-bottom: 1px dotted #ffd18d;
+  text-decoration: none;
+  font-size: 1em;
+  line-height: 1.525em;
+  border-bottom: none;
+  font-family: "Bitter", "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
 
 .unit-body a:hover {
-    background-color: #FFD18D;
+  background-color: #ffd18d;
 }
 
-@import 'simple-texture/home/responsive';
+@import "simple-texture/home/responsive";
