add life news and adjust load by scroll

--- a/_includes/blog/header.html
+++ b/_includes/blog/header.html
@@ -10,16 +10,16 @@
                         <button class="btn-search" title="{{ site.data.i18n[site.lang].search }}"></button>
                         <!-- <![endif]-->
                     </li>
-                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].articles }}" href="{{ site.paths.blog | relative_url }}">{{ site.data.i18n[site.lang].articles }}</a></li>
-                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].categories }}" href="{{ site.paths.categories | relative_url }}">{{ site.data.i18n[site.lang].categories }}</a></li>
-                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].tags }}" href="{{ site.paths.tags | relative_url }}">{{ site.data.i18n[site.lang].tags }}</a></li>
-                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].reader }}" href="{{ site.paths.reader | relative_url }}">{{ site.data.i18n[site.lang].reader }}</a></li>
-                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].learner }}" href="{{ site.paths.learner | relative_url }}">{{ site.data.i18n[site.lang].learner }}</a></li>
-                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].life_news }}" href="{{ site.paths.life_news | relative_url }}">{{ site.data.i18n[site.lang].life_news }}</a></li>
-                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].letter }}" href="{{ site.paths.letter | relative_url }}">{{ site.data.i18n[site.lang].letter }}</a></li>
-                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].song }}" href="{{ site.paths.song | relative_url }}">{{ site.data.i18n[site.lang].song }}</a></li>
-                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].gist }}" href="{{ site.paths.gist | relative_url }}">{{ site.data.i18n[site.lang].gist }}</a></li>
-                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].qq_zone }}" href="{{ site.paths.qq_zone | relative_url }}">{{ site.data.i18n[site.lang].qq_zone }}</a></li>
+                    <li class="nav-link"><a label="article" title="{{ site.data.i18n[site.lang].articles }}" href="{{ site.paths.blog | relative_url }}">{{ site.data.i18n[site.lang].articles }}</a></li>
+                    <li class="nav-link"><a label="category" title="{{ site.data.i18n[site.lang].categories }}" href="{{ site.paths.categories | relative_url }}">{{ site.data.i18n[site.lang].categories }}</a></li>
+                    <li class="nav-link"><a label="tag" title="{{ site.data.i18n[site.lang].tags }}" href="{{ site.paths.tags | relative_url }}">{{ site.data.i18n[site.lang].tags }}</a></li>
+                    <li class="nav-link"><a label="book" title="{{ site.data.i18n[site.lang].reader }}" href="{{ site.paths.reader | relative_url }}">{{ site.data.i18n[site.lang].reader }}</a></li>
+                    <li class="nav-link"><a label="learn" title="{{ site.data.i18n[site.lang].learner }}" href="{{ site.paths.learner | relative_url }}">{{ site.data.i18n[site.lang].learner }}</a></li>
+                    <li class="nav-link"><a label="life" title="{{ site.data.i18n[site.lang].life_news }}" href="{{ site.paths.life_news | relative_url }}">{{ site.data.i18n[site.lang].life_news }}</a></li>
+                    <li class="nav-link"><a label="letter" title="{{ site.data.i18n[site.lang].letter }}" href="{{ site.paths.letter | relative_url }}">{{ site.data.i18n[site.lang].letter }}</a></li>
+                    <li class="nav-link"><a label="song" title="{{ site.data.i18n[site.lang].song }}" href="{{ site.paths.song | relative_url }}">{{ site.data.i18n[site.lang].song }}</a></li>
+                    <li class="nav-link"><a label="gist" title="{{ site.data.i18n[site.lang].gist }}" href="{{ site.paths.gist | relative_url }}">{{ site.data.i18n[site.lang].gist }}</a></li>
+                    <li class="nav-link"><a label="QQ" title="{{ site.data.i18n[site.lang].qq_zone }}" href="{{ site.paths.qq_zone | relative_url }}">{{ site.data.i18n[site.lang].qq_zone }}</a></li>
                     {% if site.live2dgirl %}
                     <li class="nav-link"><a title="召唤萌妹" class="btn-init-live2dgirl" href="#">萌妹</a></li>
                     {% endif %}
