--- a/_includes/blog/scripts.html
+++ b/_includes/blog/scripts.html
@@ -183,5 +183,6 @@ $(document).ready(function () {
     });
     $(document).ready(function () {
         $(".post-image > img").unveil(450);
+        $(".nav-global a[label='{{ page.label }}']").css("background-color", "orange")
     });
 </script>
