--- a/_includes/common/utterances.html
+++ b/_includes/common/utterances.html
@@ -1,6 +1,10 @@
 <script src="https://utteranc.es/client.js"
     repo="{{ site.utterances.repo }}"
+    {% if page.utterances.issue_number %}
+    issue-number="{{ page.utterances.issue_number }}"
+    {% else %}
     issue-term="{{ site.utterances.issue_term }}"
+    {% endif %}
     theme="{{ site.utterances.theme }}"
     crossorigin="anonymous"
     async></script>
