--- a/_layouts/reader/reader.html
+++ b/_layouts/reader/reader.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-8">
     <title>我的博客·读书手札</title>
     <link rel="stylesheet" href="{{ site.baseurl }}/reader/static/css/main.css" />
+    {% include common/libraries.html %}
 </head>
 
 <body>
