adjust load by page

--- a/_includes/common/img2show.html
+++ b/_includes/common/img2show.html
@@ -26,6 +26,7 @@
         }
     }
 
+    var img2ShowExit = true;
     function imgEnlarge() {
         $(".entry-content img").mouseover(function () {
             $(this).css("cursor", "pointer");//鼠标移动到图片，鼠标箭头变为手势
