add board and book status

--- a/_includes/blog/header.html
+++ b/_includes/blog/header.html
@@ -19,6 +19,7 @@
                     <li class="nav-link"><a label="letter" title="{{ site.data.i18n[site.lang].letter }}" href="{{ site.paths.letter | relative_url }}">{{ site.data.i18n[site.lang].letter }}</a></li>
                     <li class="nav-link"><a label="song" title="{{ site.data.i18n[site.lang].song }}" href="{{ site.paths.song | relative_url }}">{{ site.data.i18n[site.lang].song }}</a></li>
                     <li class="nav-link"><a label="gist" title="{{ site.data.i18n[site.lang].gist }}" href="{{ site.paths.gist | relative_url }}">{{ site.data.i18n[site.lang].gist }}</a></li>
+                    <li class="nav-link"><a label="gist" title="{{ site.data.i18n[site.lang].board }}" href="{{ site.paths.board | relative_url }}">{{ site.data.i18n[site.lang].board }}</a></li>
                     <li class="nav-link"><a label="QQ" title="{{ site.data.i18n[site.lang].qq_zone }}" href="{{ site.paths.qq_zone | relative_url }}">{{ site.data.i18n[site.lang].qq_zone }}</a></li>
                     {% if site.live2dgirl %}
                     <li class="nav-link"><a title="召唤萌妹" class="btn-init-live2dgirl" href="#">萌妹</a></li>
