--- a/_includes/blog/overlay.html
+++ b/_includes/blog/overlay.html
@@ -13,6 +13,7 @@
                 <li><a href="{{ site.paths.letter | relative_url }}">{{ site.data.i18n[site.lang].letter }}</a></li>
                 <li><a href="{{ site.paths.song | relative_url }}">{{ site.data.i18n[site.lang].song }}</a></li>
                 <li><a href="{{ site.paths.gist | relative_url }}">{{ site.data.i18n[site.lang].gist }}</a></li>
+                <li><a href="{{ site.paths.board | relative_url }}">{{ site.data.i18n[site.lang].board }}</a></li>
                 <li><a href="{{ site.paths.qq_zone | relative_url }}">{{ site.data.i18n[site.lang].qq_zone }}</a></li>
                 <li><a href="{{ site.paths.home | relative_url }}">{{ site.data.i18n[site.lang].about }}</a></li>
             </ul>
