--- a/_layouts/board/board.html
+++ b/_layouts/board/board.html
@@ -11,7 +11,7 @@
     {% include common/meta.html %}
     <link href='{{ site.baseurl }}/assets/stylesheets/blog.css' rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
-    <title>我的博客·读书手札</title>
+    <title>我的博客·本地看板</title>
     <link rel="stylesheet" href="{{ site.baseurl }}/board/static/css/main.css" />
     {% include common/libraries.html %}
 </head>
