--- a/_includes/blog/footer.html
+++ b/_includes/blog/footer.html
@@ -3,7 +3,10 @@
         <div class="unit-inner unit-foot-inner">
             <div class="misc vcard">
                 <div class="about">
-                    <h4><a href="{{ site.paths.home | relative_url }}">{{ site.data.i18n[site.lang].about }}</a></h4>
+                    <h4>
+                        <a href="{{ site.paths.home | relative_url }}">{{ site.data.i18n[site.lang].about }}</a>
+                        <img src="https://visitor-badge.glitch.me/badge?page_id=petterobam-{{ page.url }}" style="position: relative; bottom: -3px;" />
+                    </h4>
                     {% if site.blog.footer_content %}
                         <p>{{ site.blog.footer_content }}</p>
                     {% endif %}
