--- a/_includes/blog/overlay.html
+++ b/_includes/blog/overlay.html
@@ -12,9 +12,8 @@
                 <li><a href="{{ site.paths.life_news | relative_url }}">{{ site.data.i18n[site.lang].life_news }}</a></li>
                 <li><a href="{{ site.paths.letter | relative_url }}">{{ site.data.i18n[site.lang].letter }}</a></li>
                 <li><a href="{{ site.paths.song | relative_url }}">{{ site.data.i18n[site.lang].song }}</a></li>
-                <li><a href="{{ site.paths.gist | relative_url }}">{{ site.data.i18n[site.lang].gist }}</a></li>
-                <li><a href="{{ site.paths.board | relative_url }}">{{ site.data.i18n[site.lang].board }}</a></li>
-                <li><a href="{{ site.paths.qq_zone | relative_url }}">{{ site.data.i18n[site.lang].qq_zone }}</a></li>
+                <li><a href="{{ site.paths.family | relative_url }}">{{ site.data.i18n[site.lang].family }}</a></li>
+                <li><a href="{{ site.paths.other | relative_url }}">{{ site.data.i18n[site.lang].other }}</a></li>
                 <li><a href="{{ site.paths.home | relative_url }}">{{ site.data.i18n[site.lang].about }}</a></li>
             </ul>
         </div>
