--- a/_layouts/gist/gist.html
+++ b/_layouts/gist/gist.html
@@ -11,19 +11,8 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/stylesheets/reset.css" type="text/css" media="screen" />
     {% include common/meta.html %}
     <link href='{{ site.baseurl }}/assets/stylesheets/blog.css' rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/stylesheets/pointtime.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/gist/css/gist.css" type="text/css" media="screen" />
     {% include common/libraries.html %}
-    <script language="javascript">
-        $(function(){
-            var tags_a = $(".point-time");
-            tags_a.each(function(){
-                var x = 5;
-                var y = 0;
-                var rand = parseInt(Math.random() * (x - y + 1) + y);
-                $(this).addClass("point"+rand);
-            });
-        });
-    </script>
 </head>
 
 <body>
@@ -47,5 +36,6 @@
 
     {% include blog/scripts.html %}
     {% include common/img2show.html %}
+    {% include common/gist.html %}
 </body>
 </html>
